@@ -38,6 +38,37 @@
           server processes for large scale software systems.
         </p>
       </section>
+
+      <section>
+        <heading>The LogTool command line tool</heading>
+        <p>The LogTool command line tool provides a mechanism to log various
+          types of messages (using the ECCL logging system) from a process
+          which is not itsself ECCL enabled (ie not built using the ECCL
+          classes).  You may use this to generate logging from shell scripts
+          or from Java servlets etc.
+        </p>
+        <p>The tool requires at least two arguments:<br />
+          '-Name XXX' specifies the name under which the message is to be logged
+          and<br />
+          '-Mesg XXX' specifies the content of the message to be logged.<br />
+          The optional '-Mode XXX' argument specifies the type of log to be
+          generated (one of Audit, Debug, Warn, Error or Alert) and defaults
+          to generating a 'Warn' log.
+        </p>
+      </section>
+      <section>
+        <heading>The Terminate command line tool</heading>
+        <p>The Terminate command line tool provides a mechanism to shut down
+          an ECCL host.  This tool contacts a Command server and tells it to
+          shut down all it's local client process and the shut itsself down.
+        </p>
+        <p>You may use -CommandHost and -CommandName to specify a Command
+          server to contact, otherwise the default local Command server is
+          contacted (or if there is no local server, any available Command
+          server on the local network is contacted).
+        </p>
+      </section>
+
     </chapter>
  */
 
