@@ -1,3 +1,10 @@
+2013-08-05  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * LogTool.m: Tool to generate logs
+        * Terminate.m: Cleanups
+        * GNUmakefile: Build new tool
+        * ECCL.h: Document new tool
+
 2013-07-12  Richard Frith-Macdonald <rfm@gnu.org>
 
         * EcProcess.h: New method to get EC user directory
